fixed z-index issues

--- a/src/components/DesktopIcons.styles.module.css
+++ b/src/components/DesktopIcons.styles.module.css
@@ -1,4 +1,5 @@
 .container {
+  z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
@@ -27,7 +28,7 @@
 }
 
 .img {
-  webkit-user-select: none;
+  /* webkit-user-select: none; */
   -khtml-user-select: none;
   -moz-user-select: none;
   -o-user-select: none;
