--- a/src/components/MainWindows.style.module.css
+++ b/src/components/MainWindows.style.module.css
@@ -81,6 +81,11 @@
   border: none;
   border: 2px solid rgba(54, 29, 199, 1);
   border-color: rgba(54, 29, 199, 1);
+  padding: 12px 20px;
+  color: rgba(54, 29, 199, 1);
+}
+.searchGroup input:focus {
+  outline: none;
 }
 
 .searchGroup p {
